--- a/assignments/11_mueller/theorie.tex
+++ b/assignments/11_mueller/theorie.tex
@@ -97,9 +97,10 @@ Analog für $\frac{1}{4}+\epsilon$ und $\frac{1}{2}+\epsilon$
 FF(I)=m+\frac{m}{15}+2m+\frac{2m}{7}+5m+\frac{m}{3}+16m\\
 =24m+\frac{m}{15}+\frac{2m}{7}+\frac{m}{3}\\
 =24m+\frac{7m+30m+35m}{105}\\
+=24m+\frac{72m}{105}
 =24m+\frac{24m}{35}
 \end{align*}
-Für das Einfügen der Sequenz $I$ ($64m$ Elemente) werden $24m+\lceil\frac{24m}{35}\rceil$ Container benötigt.
+Für das Einfügen der Sequenz $I$ ($16m\cdot4=64m$ Elemente) werden $24m+\lceil\frac{24m}{35}\rceil$ Container benötigt.
 \newpage
 Wenden Sie First-Fit-Decreasing auf $I$ an. Geben Sie die zugehörige Packung sowie $FFD(I)$ an.\\
 Sortiere Sequenz $I$, sodass die Elemente in absteigender Reihenfolge vorliegen:\\
@@ -249,5 +250,69 @@ naiven L{\"o}sung, welche exponentielle Laufzeit (in $n$) h{\"a}tte.
     }%
 \end{algorithm}
 \end{minipage}
+\newpage
+Eine weitere Lösung welche mit weniger Speicher auskommt ist durch folgenden Algorithmus gegeben.\\
+Sei coeff nun ein eindimensionales Array der Länge $n$.\\
+
+\begin{algorithmic}[H]
+    \small
+%
+    \SetKwProg{Fn}{Function}{}{}%
+    \SetKwInOut{Input}{Input}%
+    \SetKwInOut{Output}{Output}%
+%
+    \Input{$n$: \texttt{integer}, $i$: \texttt{integer}}%
+    \Output{$\binom{n}{i}$: \texttt{integer}}%
+    \Fn{binom($n$, $i$)}{%
+    	\If{$i>n$}{
+        	\Return $0$\;
+        }
+        coeff[$0$] $\leftarrow$ $1$\;
+        \For{$k \leftarrow 1$ \KwTo $n$}{
+            coeff[$k$] $\leftarrow$ 1\;
+            \For{$j \leftarrow k-1$ \KwTo $1$}{
+            	coeff[$j$] $\leftarrow$ coeff[$j$]+coeff[$j-1$]\;
+            }
+        }
+        \Return coeff[$i$]\;   
+    }%
+\end{algorithmic}
+Belegung von coeff nach der $k$-ten Iteration der äußeren Schleife:\\
+
+\begin{center}
+ $k=1$:
+  \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c |  }
+    \hline
+    1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 &... & 0\\ \hline
+  \end{tabular}
+\end{center}
+
+\begin{center}
+ $k=2$:
+ \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c |  }
+    \hline
+    1 & 2 & 1 & 0 & 0 & 0 & 0 & 0 &... & 0\\ \hline
+  \end{tabular}
+\end{center}
+
+\begin{center}
+ $k=3$:
+ \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c |  }
+    \hline
+    1 & 3 & 3 & 1 & 0 & 0 & 0 & 0 &... & 0\\ \hline
+  \end{tabular}
+\end{center}
+
+\begin{center}
+ $k=4$:
+ \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c |  }
+    \hline
+    1 & 4 & 6  & 4 & 1 & 0 & 0 & 0 &... & 0\\ \hline
+  \end{tabular}\\
+..\\
+..\\
+..\\
+\end{center}
+Die Belegung von coeff nach dem $k$-ten Durchlauf entspricht also der $k$-ten Zeile des Pascalschen Dreiecks. Das $i$-te Element des nach der $n$-ten Iteration erhaltenen Koeffizientenarrays entspricht so der Lösung von $\binom{n}{i}$.
 
 \end{document}
