size of array in pdf

--- a/assignments/11_mueller/theorie.tex
+++ b/assignments/11_mueller/theorie.tex
@@ -252,7 +252,7 @@ naiven L{\"o}sung, welche exponentielle Laufzeit (in $n$) h{\"a}tte.
 \end{minipage}
 \newpage
 Eine weitere Lösung welche mit weniger Speicher auskommt ist durch folgenden Algorithmus gegeben.\\
-Sei coeff nun ein eindimensionales Array der Länge $n$.\\
+Sei coeff nun ein eindimensionales Array der Länge $n+1$.\\
 
 \begin{algorithmic}[H]
     \small
