--- a/assignments/12_kocher/theorie.tex
+++ b/assignments/12_kocher/theorie.tex
@@ -186,8 +186,30 @@ m[1, 5] = \min\begin{cases}
 \end{cases}
 \end{equation}
 
+\clearpage
+
 Damit ergibt sich nach Aufruf von $Opt-Klam(A, s, 1, n)$ folgende optimale
 Klammerung:
 $\left( \left( A_1 \right) \left( A_2 \right) \right) \left( \left( \left( A_3 \right) \left( A_4 \right) \right) \left( A_5 \right) \right)$.
+
+Mit dieser Klammerung ergeben sich die minimalen Kosten von $13560$:
+
+\begin{equation}
+A' = A_1 \cdot A_2 \Rightarrow (41 \times 40)\text{-Matrix} \cdot (40 \times 4)\text{-Matrix} = 41 \cdot 40 \cdot 4 = 6560 \quad (41 \times 4)\text{-Matrix}
+\end{equation}
+
+\begin{equation}
+A'' = A_3 \cdot A_4 \Rightarrow (4 \times 25)\text{-Matrix} \cdot (25 \times 34)\text{-Matrix} = 4 \cdot 25 \cdot 34 = 3400 \quad (4 \times 34)\text{-Matrix}
+\end{equation}
+
+\begin{equation}
+A''' = A'' \cdot A_5 \Rightarrow (4 \times 34)\text{-Matrix} \cdot (34 \times 12)\text{-Matrix} = 4 \cdot 34 \cdot 12 = 1632 \quad (4 \times 12)\text{-Matrix}
+\end{equation}
+
+\begin{equation}
+A'''' = A' \cdot A''' \Rightarrow (41 \times 4)\text{-Matrix} \cdot (4 \times 12)\text{-Matrix} = 41 \cdot 4 \cdot 12 = 1968 \quad (41 \times 12)\text{-Matrix}
+\end{equation}
+
+Damit ergeben sich die Gesamtkosten dieser Klammerung mit $6560 + 3400 + 1632 + 1968 = \textbf{13560}$.
 
 \end{document}
